policies/kyverno/require-resource-limits.yaml
apiVersion: kyverno.io/v1

kind: ClusterPolicy

metadata:

  name: require-resource-limits

spec:

  validationFailureAction: enforce

  rules:

    - name: resource-limits

      match:

        resources:

          kinds:

            - Pod

      validate:

        message: "CPU and Memory limits are required"

        pattern:

          spec:

            containers:

              - resources:

                  limits:

                    memory: "?*"

                    cpu: "?*"
